# glyph-weave-forge

./: .gitignore  AGENTS.md  Cargo.toml  GlyphWeaveForge.md  LICENSE  README.md  skills-lock.json
.agents/skills/gwf-release/: SKILL.md
.agents/skills/gwf-validate/: SKILL.md
.github/: FUNDING.yml
docs/: api.html  contributing.html  getting-started.html  index.html  integration-guide.md  style.css
docs-archive/: math-formula-support-plan.md
examples/: convert_markdown.rs  theme_config_validation.rs  typst_smoke.rs
examples/markdown/: mathematical-article.md  mermaid-engineering-article.md  sdd-models-open-code.md
scripts/: validate-feature-matrix.sh
sdd/bootstrap-glyphweaveforge/: apply-progress  archive-report  design  spec  tasks  verify-report
sdd/typst-backend-and-wasm-readiness/: apply-progress  archive-report  tasks  verify-report
specs/: formulas.md  mermaid.md  themes-styles.md
src/: composition.rs  lib.rs  math.rs  tests.rs
src/adapters/: markdown.rs  mod.rs  resources.rs
src/adapters/render/: minimal.rs  mod.rs  plan.rs  typst.rs
src/api/: forge.rs  mod.rs  options.rs
src/core/: config.rs  document.rs  error.rs  mod.rs  ports.rs
src/pipeline/: convert.rs  mod.rs  output.rs
tests/: api_smoke.rs  feature_matrix.rs  pdf_integration.rs
