[package]
name = "glyphweaveforge"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "Convert Markdown into PDF through an explicit Rust pipeline with minimal and Typst backends."
license = "Apache-2.0"
repository = "https://github.com/GustavoGutierrez/glyph-weave-forge"
homepage = "https://github.com/GustavoGutierrez/glyph-weave-forge"
readme = "README.md"
documentation = "https://docs.rs/glyphweaveforge"
keywords = ["markdown", "pdf", "converter", "typst"]
categories = ["text-processing", "rendering"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/logo.png",
    "/src/**",
    "/tests/**",
]

[package.metadata.docs.rs]
no-default-features = false
features = ["fs", "renderer-minimal"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["fs", "renderer-minimal"]
fs = []
mermaid = []
math = []
renderer-minimal = []
renderer-typst = ["dep:typst", "dep:typst-as-lib", "dep:typst-pdf"]
typst = ["renderer-typst"]

[dependencies]
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
typst = { version = "0.14.2", optional = true }
typst-as-lib = { version = "0.15.4", optional = true, default-features = false, features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = { version = "0.14.2", optional = true }

[dev-dependencies]
tempfile = "3"
